tests/invalid/Tuple_Invalid_6.whiley
function f(int,real r) -> int:
    int x, int y
    x,y = r
    return 1